--- a/quem-sou-eu.html
+++ b/quem-sou-eu.html
@@ -6,14 +6,27 @@
 <link rel="stylesheet" href="style.css">
 <style>body { background-color: #123456; }</style>
 </head>
+<header>
+  <img src="infinito.png" class="logo" alt="Logo Crescer com Autismo">
+  <nav><ul>
+    <li><a href="index.html">Início</a></li>
+    <li><a href="quem-sou-eu.html">Quem sou eu</a></li>
+    <li><a href="artigos.html">Artigos</a></li>
+    <li><a href="educacao.html">Educação</a></li>
+    <li><a href="contato.html">Contato</a></li>
+    <li>🇬🇧 / 🇵🇹</li>
+  </ul></nav>
+</header>
+
 <main>
   <h2>Quem sou eu</h2>
   <img src="melanie.jpg" style="float:right; max-width:200px; margin:10px; border-radius:12px;">
   <p><strong>Melanie Mata</strong><br>Nascida em 7 de outubro de 1978</p>
-  <p>Sou psicóloga formada pela Universidade Lusófona (2008) e tenho certificação em <strong>Understanding Autism</strong> (Milton Keynes College, UK). Também sou Coach especializada em autismo.</p>
+  <p>Sou psicóloga formada pela Universidade Lusófona (2008) e tenho certificação em <strong>Understanding Autism</strong> (Milton Keynes College, UK).<br>Também sou Coach especializada em autismo.</p>
   <p>Trabalhei com crianças em Moçambique (After School), com adultos no Reino Unido, e desenvolvi paixão pelo autismo.</p>
   <p>Hoje ofereço acompanhamento online com estratégias individualizadas para famílias e também trabalho diretamente com crianças no espectro aqui no Reino Unido.</p>
   <p><strong>Minha Visão para o Futuro</strong><br>Meu sonho é aplicar minha experiência em locais menos favorecidos, onde o apoio ao autismo ainda é limitado.</p>
 </main>
+
 <footer>© 2025 Crescer com Autismo | Melanie Mata</footer>
 </body></html>
