--- a/artigos.html
+++ b/artigos.html
@@ -18,6 +18,26 @@
     <li>🇵🇹 | 🇬🇧</li>
   </ul></nav>
 </header>
-<main><h2>Artigos</h2><p>Em breve: artigos sobre autismo, neurodiversidade e inclusão.</p></main>
+<main>
+  <h1>Artigos sobre Autismo</h1>
+
+  <section>
+    <h2>1. Os Desafios da Transição para a Vida Adulta no Autismo</h2>
+    <p>Para os jovens autistas, a transição da adolescência para a vida adulta é um dos momentos mais desafiadores. Muitos enfrentam dificuldades em adaptar-se a novas rotinas, responsabilidades e interações sociais.</p>
+    <p>Muitas famílias sentem-se perdidas, sem saber como apoiar seus filhos nessa nova fase. É fundamental oferecer estratégias individualizadas, apoio emocional e ferramentas práticas para promover autonomia, confiança e inclusão.</p>
+  </section>
+
+  <section>
+    <h2>2. A Importância da Intervenção Precoce</h2>
+    <p>A intervenção precoce faz toda a diferença no desenvolvimento de crianças no espectro. Quanto mais cedo for iniciado o acompanhamento, maiores são as chances de progresso em áreas como comunicação, interação social e comportamento.</p>
+    <p>O apoio adequado pode melhorar significativamente a qualidade de vida da criança e da família. Identificar sinais precoces e buscar orientação profissional é um passo essencial para um futuro mais promissor.</p>
+  </section>
+
+  <section>
+    <h2>3. Como as Famílias Podem Superar o Estigma</h2>
+    <p>O estigma social ainda é um grande obstáculo enfrentado por muitas famílias. A falta de informação e compreensão leva ao preconceito e ao isolamento.</p>
+    <p>É importante promover a conscientização na comunidade, nas escolas e nos ambientes de trabalho. Famílias bem informadas tornam-se agentes de mudança, quebrando barreiras e construindo uma sociedade mais inclusiva.</p>
+  </section>
+</main>
 <footer>&copy; 2025 Crescer com Autismo | Melanie Mata</footer>
 </body></html>
