--- a/artigos.html
+++ b/artigos.html
@@ -23,20 +23,75 @@
 
   <section>
     <h2>1. Os Desafios da Transição para a Vida Adulta no Autismo</h2>
-    <p>Para os jovens autistas, a transição da adolescência para a vida adulta é um dos momentos mais desafiadores. Muitos enfrentam dificuldades em adaptar-se a novas rotinas, responsabilidades e interações sociais.</p>
-    <p>Muitas famílias sentem-se perdidas, sem saber como apoiar seus filhos nessa nova fase. É fundamental oferecer estratégias individualizadas, apoio emocional e ferramentas práticas para promover autonomia, confiança e inclusão.</p>
+    <p>
+      A transição da adolescência para a vida adulta é um processo desafiador para qualquer jovem, mas para pessoas no espectro do autismo esse momento pode ser ainda mais delicado. Deixar a escola, lidar com responsabilidades, enfrentar expectativas sociais e pensar no futuro pode gerar ansiedade, medo e frustração.
+    </p>
+    <p>
+      Muitas famílias sentem-se desamparadas ao perceberem que os apoios que existiam durante a infância e adolescência diminuem drasticamente na vida adulta. Sem uma rede de suporte estruturada, o risco de isolamento, desemprego e dependência aumenta.
+    </p>
+    <p>
+      É essencial que essa transição seja feita de forma gradual e planejada, respeitando o tempo e as características de cada jovem. Um plano de transição pode incluir:
+    </p>
+    <ul>
+      <li>Acompanhamento psicológico e vocacional</li>
+      <li>Treino de habilidades sociais e de vida diária</li>
+      <li>Exploração de oportunidades educacionais e profissionais</li>
+      <li>Envolvimento ativo da família e dos cuidadores</li>
+    </ul>
+    <p>
+      Promover a autonomia e o protagonismo dessas pessoas é o primeiro passo para uma vida adulta mais digna e feliz. O apoio contínuo é essencial — a independência não acontece de forma mágica, ela é construída com orientação, respeito e paciência.
+    </p>
   </section>
 
   <section>
-    <h2>2. A Importância da Intervenção Precoce</h2>
-    <p>A intervenção precoce faz toda a diferença no desenvolvimento de crianças no espectro. Quanto mais cedo for iniciado o acompanhamento, maiores são as chances de progresso em áreas como comunicação, interação social e comportamento.</p>
-    <p>O apoio adequado pode melhorar significativamente a qualidade de vida da criança e da família. Identificar sinais precoces e buscar orientação profissional é um passo essencial para um futuro mais promissor.</p>
+    <h2>2. A Importância da Intervenção Precoce no Autismo</h2>
+    <p>
+      A intervenção precoce é uma das ferramentas mais eficazes para apoiar o desenvolvimento de crianças no espectro do autismo. Quanto mais cedo forem identificadas as necessidades da criança, maiores são as chances de desenvolver suas habilidades de forma significativa.
+    </p>
+    <p>
+      A primeira infância é um período de grande plasticidade cerebral, o que significa que o cérebro tem uma enorme capacidade de adaptação e aprendizagem. Ao intervir nesta fase, é possível estimular áreas essenciais como:
+    </p>
+    <ul>
+      <li>Comunicação verbal e não verbal</li>
+      <li>Comportamento social</li>
+      <li>Regulação emocional</li>
+      <li>Coordenação motora e habilidades funcionais</li>
+    </ul>
+    <p>
+      As estratégias utilizadas na intervenção precoce devem ser adaptadas às características de cada criança. Algumas das mais comuns incluem:
+    </p>
+    <ul>
+      <li>ABA (Análise do Comportamento Aplicada)</li>
+      <li>Terapia fonoaudiológica</li>
+      <li>Terapia ocupacional</li>
+      <li>Acompanhamento psicológico</li>
+      <li>Apoio escolar especializado</li>
+    </ul>
+    <p>
+      Além de beneficiar diretamente a criança, a intervenção precoce fortalece também a família, que recebe orientação sobre como lidar com as dificuldades do dia a dia e criar um ambiente mais estruturado e afetivo.
+    </p>
   </section>
 
   <section>
     <h2>3. Como as Famílias Podem Superar o Estigma</h2>
-    <p>O estigma social ainda é um grande obstáculo enfrentado por muitas famílias. A falta de informação e compreensão leva ao preconceito e ao isolamento.</p>
-    <p>É importante promover a conscientização na comunidade, nas escolas e nos ambientes de trabalho. Famílias bem informadas tornam-se agentes de mudança, quebrando barreiras e construindo uma sociedade mais inclusiva.</p>
+    <p>
+      Apesar dos avanços no conhecimento sobre o autismo, o estigma ainda é uma realidade dura e presente em muitos contextos. Famílias enfrentam olhares de julgamento, falta de empatia e exclusão social simplesmente por terem um filho que se comporta de maneira diferente.
+    </p>
+    <p>
+      Esse estigma pode surgir em ambientes escolares, familiares, comunitários e até nos serviços de saúde. Muitas vezes, os pais são culpabilizados ou recebem pouco apoio, o que gera sentimentos de culpa, solidão e até abandono emocional.
+    </p>
+    <p>
+      Superar o estigma começa com a conscientização. É importante que as famílias:
+    </p>
+    <ul>
+      <li>Compartilhem conhecimento sobre o autismo com parentes, amigos e professores</li>
+      <li>Participem de grupos de apoio e redes de famílias</li>
+      <li>Valorizem os progressos e o potencial da criança ou jovem, ao invés de focar apenas nas limitações</li>
+      <li>Reivindiquem os direitos de seus filhos, exigindo inclusão nas escolas, atividades e serviços públicos</li>
+    </ul>
+    <p>
+      A sociedade precisa compreender que o autismo não é uma falha, mas uma forma diferente de viver, pensar e sentir o mundo. Famílias fortes e bem informadas são agentes de mudança social.
+    </p>
   </section>
 </main>
 <footer>&copy; 2025 Crescer com Autismo | Melanie Mata</footer>
