Add title text near logo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <header>
   <img src="infinito.png" class="logo" alt="Logo Crescer com Autismo">
+  <span class="site-title">Crescer com Autismo</span>
   <nav><ul>
     <li><a href="index.html">Início</a></li>
     <li><a href="quem-sou-eu.html">Quem sou eu</a></li>
