Bem-vindo ao Coaching for Life with Melanie Mata

--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <li>🇵🇹 | 🇬🇧</li>
   </ul></nav>
 </header>
-<main><h1>Bem-vindo ao Crescer com Autismo</h1><p>Site com apoio, recursos e informação.</p></main>
+<main><h1>Bem-vindo ao Coaching for life with Melanie Mata</h1><p>Site com apoio, recursos e informação.</p></main>
 <footer>&copy; 2025 Crescer com Autismo | Melanie Mata</footer>
 </body></html>
