fix image path melanie.jpg

--- a/quem-sou-eu.html
+++ b/quem-sou-eu.html
@@ -20,7 +20,7 @@
 
 <main>
   <h2>Quem sou eu</h2>
-  <img src="melanie.JPG" style="float:right; max-width:200px; margin:10px; border-radius:12px;">
+ <img src="melanie.jpg" alt="Foto de Melanie Mata" class="bio-foto">
   <p><strong>Melanie Mata</strong><br>Nascida em 7 de outubro de 1978</p>
   <p>Sou psicóloga formada pela Universidade Lusófona (2008) e tenho certificação em <strong>Understanding Autism</strong> (Milton Keynes College, UK).<br>Também sou Coach especializada em autismo.</p>
   <p>Trabalhei com crianças em Moçambique (After School), com adultos no Reino Unido, e desenvolvi paixão pelo autismo.</p>
