clean index.html (remove inline style + add body class)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Index</title>
 <link rel="stylesheet" href="style.css">
-<style>body { background-color: #2e1a47; }</style>
+<body class="home">
 </head>
 <body>
 <header>
