add body class, usar .bio-foto no CSS

--- a/quem-sou-eu.html
+++ b/quem-sou-eu.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Quem-sou-eu</title>
 <link rel="stylesheet" href="style.css">
-<style>body { background-color: #123456; }</style>
+<body class="quem">
 </head>
 <header>
   <img src="infinito.png" class="logo" alt="Logo Crescer com Autismo">
