restore bio text in quem-sou-eu.

--- a/quem-sou-eu.html
+++ b/quem-sou-eu.html
@@ -20,11 +20,17 @@
 
 <main>
   <h2>Quem sou eu</h2>
- <img src="melanie.jpg" alt="Foto de Melanie Mata" class="bio-foto">
+
+  <img src="melanie.jpg" class="bio-foto" alt="Foto de Melanie Mata">
+
   <p><strong>Melanie Mata</strong><br>Nascida em 7 de outubro de 1978</p>
-  <p>Sou psicóloga formada pela Universidade Lusófona (2008) e tenho certificação em <strong>Understanding Autism</strong> (Milton Keynes College, UK).<br>Também sou Coach especializada em autismo.</p>
+
+  <p>Sou psicóloga formada pela Universidade Lusófona (2008) e tenho certificação em <strong>Understanding Autism</strong> (Milton Keynes College, UK). Também sou Coach especializada em autismo.</p>
+
   <p>Trabalhei com crianças em Moçambique (After School), com adultos no Reino Unido, e desenvolvi paixão pelo autismo.</p>
+
   <p>Hoje ofereço acompanhamento online com estratégias individualizadas para famílias e também trabalho diretamente com crianças no espectro aqui no Reino Unido.</p>
+
   <p><strong>Minha Visão para o Futuro</strong><br>Meu sonho é aplicar minha experiência em locais menos favorecidos, onde o apoio ao autismo ainda é limitado.</p>
 </main>
 
