Update language switcher (PT | GB)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li><a href="artigos.html">Artigos</a></li>
     <li><a href="educacao.html">Educação</a></li>
     <li><a href="contato.html">Contato</a></li>
-    <li>🇵🇹 | 🇬🇧</li>
+   <li class="lang"><span class="active">PT</span> | <a href="en/index.html">GB</a></li>
   </ul></nav>
 </header>
 <main><h1>Bem-vindo ao Coaching for life com Melanie Mata</h1><p>Site com apoio, recursos e informação.</p></main>
