Add en/index.html (English home)

--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Index</title>
-<link rel="stylesheet" href="style.css">
-<body class="home">
+  <meta charset="UTF-8">
+  <title>Home</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
-<body>
-<header>
-  <img src="infinito.png" class="logo" alt="Logo Crescer com Autismo">
-  <span class="site-title">Crescer com Autismo</span>
-  <nav><ul>
-    <li><a href="index.html">Início</a></li>
-    <li><a href="quem-sou-eu.html">Quem sou eu</a></li>
-    <li><a href="artigos.html">Artigos</a></li>
-    <li><a href="educacao.html">Educação</a></li>
-    <li><a href="contato.html">Contato</a></li>
-   <li class="lang"><span class="active">PT</span> | <a href="en/index.html">GB</a></li>
-  </ul></nav>
-</header>
-<main><h1>Bem-vindo ao Coaching for life com Melanie Mata</h1><p>Site com apoio, recursos e informação.</p></main>
-<footer>&copy; 2025 Crescer com Autismo | Melanie Mata</footer>
-</body></html>
+<body class="home">
+  <header>
+    <img src="../infinito.png" class="logo" alt="Crescer com Autismo logo">
+    <span class="site-title">Crescer com Autismo</span>
+    <nav><ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="who-am-i.html">About me</a></li>
+      <li><a href="articles.html">Articles</a></li>
+      <li><a href="education.html">Education</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li class="lang"><span class="active">GB</span> | <a href="../index.html">PT</a></li>
+    </ul></nav>
+  </header>
+
+  <main>
+    <h1>Welcome to Coaching for Life with Melanie Mata</h1>
+    <p>Site with support, resources and information.</p>
+  </main>
+
+  <footer>© 2025 Crescer com Autismo | Melanie Mata</footer>
+</body>
+</html>
