Add en/who-am-i.html (About me EN)

--- a/quem-sou-eu.html
+++ b/quem-sou-eu.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Quem-sou-eu</title>
-<link rel="stylesheet" href="style.css">
-<body class="quem">
+  <meta charset="UTF-8">
+  <title>About me</title>
+  <link rel="stylesheet" href="../style.css">
 </head>
-<header>
-  <img src="infinito.png" class="logo" alt="Logo Crescer com Autismo">
-  <nav><ul>
-    <li><a href="index.html">Início</a></li>
-    <li><a href="quem-sou-eu.html">Quem sou eu</a></li>
-    <li><a href="artigos.html">Artigos</a></li>
-    <li><a href="educacao.html">Educação</a></li>
-    <li><a href="contato.html">Contato</a></li>
-    <li>🇬🇧 / 🇵🇹</li>
-  </ul></nav>
-</header>
+<body class="quem">
+  <header>
+    <img src="../infinito.png" class="logo" alt="Crescer com Autismo logo">
+    <span class="site-title">Crescer com Autismo</span>
+    <nav><ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="who-am-i.html">About me</a></li>
+      <li><a href="articles.html">Articles</a></li>
+      <li><a href="education.html">Education</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li class="lang"><span class="active">GB</span> | <a href="../quem-sou-eu.html">PT</a></li>
+    </ul></nav>
+  </header>
 
-<main>
-  <h2>Quem sou eu</h2>
+  <main>
+    <h2>Who am I</h2>
 
-  <img src="melanie.jpg" class="bio-foto" alt="Foto de Melanie Mata">
+    <img src="../melanie.jpg" class="bio-foto" alt="Photo of Melanie Mata">
 
-  <p><strong>Melanie Mata</strong><br>Nascida em 7 de outubro de 1978</p>
+    <p><strong>Melanie Mata</strong><br>Born on 7 October 1978</p>
 
-  <p>Sou psicóloga formada pela Universidade Lusófona (2008) e tenho certificação em <strong>Understanding Autism</strong> (Milton Keynes College, UK). Também sou Coach especializada em autismo.</p>
+    <p>I’m a psychologist, graduated from Universidade Lusófona (2008), and I hold a certificate in <strong>Understanding Autism</strong> (Milton Keynes College, UK). I am also a Coach specialized in autism.</p>
 
-  <p>Trabalhei com crianças em Moçambique (After School), com adultos no Reino Unido, e desenvolvi paixão pelo autismo.</p>
+    <p>I have worked with children in Mozambique (After School), with adults in the United Kingdom, and that’s where I developed my passion for autism.</p>
 
-  <p>Hoje ofereço acompanhamento online com estratégias individualizadas para famílias e também trabalho diretamente com crianças no espectro aqui no Reino Unido.</p>
+    <p>Today I offer online support with individualized strategies for families, and I also work directly with children on the spectrum here in the UK.</p>
 
-  <p><strong>Minha Visão para o Futuro</strong><br>Meu sonho é aplicar minha experiência em locais menos favorecidos, onde o apoio ao autismo ainda é limitado.</p>
-</main>
+    <p><strong>My Vision for the Future</strong><br>My dream is to apply my experience in less privileged places, where support for autism is still limited.</p>
+  </main>
 
-<footer>© 2025 Crescer com Autismo | Melanie Mata</footer>
-</body></html>
+  <footer>© 2025 Crescer com Autismo | Melanie Mata</footer>
+</body>
+</html>
+
