Fix EN index: correct CSS/logo paths

--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,14 @@
-<!-- placeholder, we'll fill this after -->
+<link rel="stylesheet" href="../style.css">
+<body class="home">
+<header>
+  <img src="../infinito.png" class="logo" alt="Crescer com Autismo logo">
+  <span class="site-title">Crescer com Autismo</span>
+  <nav><ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About me</a></li>
+    <li><a href="articles.html">Articles</a></li>
+    <li><a href="education.html">Education</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li class="lang"><span class="active">GB</span> | <a href="../index.html">PT</a></li>
+  </ul></nav>
+</header>
