Clean en/index.html and load CSS correctly

--- a/en/index.html
+++ b/en/index.html
@@ -1,14 +1,35 @@
-<link rel="stylesheet" href="../style.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Home</title>
+
+  <!-- CSS na raiz do site -->
+  <link rel="stylesheet" href="../style.css" />
+</head>
 <body class="home">
-<header>
-  <img src="../infinito.png" class="logo" alt="Crescer com Autismo logo">
-  <span class="site-title">Crescer com Autismo</span>
-  <nav><ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About me</a></li>
-    <li><a href="articles.html">Articles</a></li>
-    <li><a href="education.html">Education</a></li>
-    <li><a href="contact.html">Contact</a></li>
-    <li class="lang"><span class="active">GB</span> | <a href="../index.html">PT</a></li>
-  </ul></nav>
-</header>
+  <header>
+    <img src="../infinito.png" class="logo" alt="Crescer com Autismo logo" />
+    <span class="site-title">Crescer com Autismo</span>
+
+    <nav>
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About me</a></li>
+        <li><a href="articles.html">Articles</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li class="lang"><span class="active">GB</span> | <a href="../index.html">PT</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Welcome to Coaching for Life with Melanie Mata</h1>
+    <p>Site with support, resources and information.</p>
+  </main>
+
+  <footer>© 2025 Crescer com Autismo | Melanie Mata</footer>
+</body>
+</html>
