--- a/contato.html
+++ b/contato.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-<meta charset="UTF-8">
-<title>Contato</title>
-<link rel="stylesheet" href="style.css">
-<style>body { background-color: #2f2f2f; }</style>
+  <meta charset="UTF-8" />
+  <title>Contato</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="contato">
 <header>
-  <img src="infinito.png" class="logo" alt="Logo Crescer com Autismo">
+  <img src="infinito.png" class="logo" alt="Logo Crescer com Autismo" />
+  <span class="site-title">Crescer com Autismo</span>
   <nav><ul>
     <li><a href="index.html">Início</a></li>
     <li><a href="quem-sou-eu.html">Quem sou eu</a></li>
     <li><a href="artigos.html">Artigos</a></li>
     <li><a href="educacao.html">Educação</a></li>
     <li><a href="contato.html">Contato</a></li>
-    <li>🇵🇹 | 🇬🇧</li>
+    <li class="lang"><span class="active">PT</span> | <a href="en/index.html">GB</a></li>
   </ul></nav>
 </header>
+
 <main>
-<h2>Contato</h2>
-<p>Email: crescercomautismo74@gmail.com</p>
-<p><a href='https://wa.me/' target='_blank'>Fale conosco via WhatsApp</a></p>
-<form>
-  <label>Nome:</label><br><input type='text'><br>
-  <label>Email:</label><br><input type='email'><br>
-  <label>Mensagem:</label><br><textarea></textarea><br>
-  <button type='submit'>Enviar</button>
-</form>
+  <h1>Contato</h1>
+  <p><strong>Email:</strong>
+    <a href="mailto:crescercomautismo74@gmail.com">crescercomautismo74@gmail.com</a>
+  </p>
+
+  <p><strong>WhatsApp / Telefone:</strong> (vamos adicionar depois)</p>
+
+  <!-- Formulário opcional para o futuro
+  <form action="#" method="post">
+    <label>Nome:<br><input type="text" name="nome"></label><br>
+    <label>Email:<br><input type="email" name="email"></label><br>
+    <label>Mensagem:<br><textarea name="mensagem"></textarea></label><br>
+    <button type="submit">Enviar</button>
+  </form>
+  -->
 </main>
+
 <footer>&copy; 2025 Crescer com Autismo | Melanie Mata</footer>
-</body></html>
+</body>
+</html>
