--- a/en/contact.html
+++ b/en/contact.html
@@ -1,41 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Contact</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body class="contato">
-  <header>
-    <img src="../infinito.png" class="logo" alt="Crescer com Autismo logo">
-    <span class="site-title">Crescer com Autismo</span>
-    <nav><ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="who-am-i.html">About me</a></li>
-      <li><a href="articles.html">Articles</a></li>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li class="lang"><span class="active">GB</span> | <a href="../contato.html">PT</a></li>
-    </ul></nav>
-  </header>
+<header>
+  <img src="../infinito.png" class="logo" alt="Crescer com Autismo logo" />
+  <span class="site-title">Crescer com Autismo</span>
+  <nav><ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About me</a></li>
+    <li><a href="articles.html">Articles</a></li>
+    <li><a href="education.html">Education</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li class="lang"><a href="../contato.html">PT</a> | <span class="active">GB</span></li>
+  </ul></nav>
+</header>
 
-  <main>
-    <h1>Contact</h1>
-    <p>You can reach me by email or WhatsApp:</p>
-    <ul>
-      <li>Email: <a href="mailto:SEUEMAIL@example.com">SEUEMAIL@example.com</a></li>
-      <li>WhatsApp: <a href="https://wa.me/SEUNUMERO" target="_blank">+44 SEU NÚMERO</a></li>
-    </ul>
+<main>
+  <h1>Contact</h1>
+  <p><strong>Email:</strong>
+    <a href="mailto:crescercomautismo74@gmail.com">crescercomautismo74@gmail.com</a>
+  </p>
 
-    <!-- Simple mailto form (optional) -->
-    <form action="mailto:SEUEMAIL@example.com" method="post" enctype="text/plain">
-      <label>Name:<br><input type="text" name="name" required></label><br><br>
-      <label>Email:<br><input type="email" name="email" required></label><br><br>
-      <label>Message:<br><textarea name="message" rows="5" required></textarea></label><br><br>
-      <button type="submit">Send</button>
-    </form>
-  </main>
+  <p><strong>WhatsApp / Phone:</strong> (we’ll add this later)</p>
+</main>
 
-  <footer>© 2025 Crescer com Autismo | Melanie Mata</footer>
+<footer>&copy; 2025 Crescer com Autismo | Melanie Mata</footer>
 </body>
 </html>
