Fix CSS path on about page

--- a/quem-sou-eu.html
+++ b/quem-sou-eu.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <title>About me</title>
-  <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8" />
+  <title>Quem sou eu</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body class="quem">
+
   <header>
     <img src="../infinito.png" class="logo" alt="Crescer com Autismo logo">
     <span class="site-title">Crescer com Autismo</span>
