Restore Portuguese “Quem sou eu” page

--- a/quem-sou-eu.html
+++ b/quem-sou-eu.html
@@ -6,37 +6,33 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="quem">
-
   <header>
-    <img src="../infinito.png" class="logo" alt="Crescer com Autismo logo">
+    <img src="infinito.png" class="logo" alt="Logo Crescer com Autismo" />
     <span class="site-title">Crescer com Autismo</span>
-    <nav><ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="who-am-i.html">About me</a></li>
-      <li><a href="articles.html">Articles</a></li>
-      <li><a href="education.html">Education</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li class="lang"><span class="active">GB</span> | <a href="../quem-sou-eu.html">PT</a></li>
-    </ul></nav>
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="quem-sou-eu.html" class="active">Quem sou eu</a></li>
+        <li><a href="artigos.html">Artigos</a></li>
+        <li><a href="educacao.html">Educação</a></li>
+        <li><a href="contato.html">Contato</a></li>
+        <li class="lang"><span class="active">PT</span> | <a href="en/index.html">GB</a></li>
+      </ul>
+    </nav>
   </header>
-
   <main>
-    <h2>Who am I</h2>
-
-    <img src="../melanie.jpg" class="bio-foto" alt="Photo of Melanie Mata">
-
-    <p><strong>Melanie Mata</strong><br>Born on 7 October 1978</p>
-
-    <p>I’m a psychologist, graduated from Universidade Lusófona (2008), and I hold a certificate in <strong>Understanding Autism</strong> (Milton Keynes College, UK). I am also a Coach specialized in autism.</p>
-
-    <p>I have worked with children in Mozambique (After School), with adults in the United Kingdom, and that’s where I developed my passion for autism.</p>
-
-    <p>Today I offer online support with individualized strategies for families, and I also work directly with children on the spectrum here in the UK.</p>
-
-    <p><strong>My Vision for the Future</strong><br>My dream is to apply my experience in less privileged places, where support for autism is still limited.</p>
+    <h2>Quem sou eu</h2>
+    <img src="melanie.jpg" class="bio-foto" alt="Foto de Melanie Mata" />
+    <p><strong>Melanie Mata</strong><br />
+    Nascida em 7 de outubro de 1978</p>
+    <p>Sou psicóloga formada pela Universidade Lusófona (2008) e tenho certificação em <strong>Understanding Autism</strong> (Mind in the UK).</p>
+    <p>Trabalhei com crianças em Moçambique (After School), com adultos no Reino Unido, e desenvolvi paixão pelo autismo.</p>
+    <p>Hoje ofereço acompanhamento online com estratégias individualizadas para famílias e também trabalho diretamente com crianças em ambientes escolares ou domiciliares.</p>
+    <p><strong>Minha Visão para o Futuro</strong><br />
+    Meu sonho é aplicar minha experiência em locais menos favorecidos, onde o acesso a informações e apoio ainda é limitado.</p>
   </main>
-
-  <footer>© 2025 Crescer com Autismo | Melanie Mata</footer>
+  <footer>
+    &copy; 2025 Crescer com Autismo | Melanie Mata
+  </footer>
 </body>
 </html>
-
